Fix squishing

--- a/client-course-schedulizer/src/components/Toolbar/ScheduleToolbar/ScheduleToolbar.scss
+++ b/client-course-schedulizer/src/components/Toolbar/ScheduleToolbar/ScheduleToolbar.scss
@@ -14,8 +14,8 @@
   padding: $spacing;
   margin-left: -2 * $spacing;
   margin-right: -2 * $spacing;
-  // TODO: there is slight squishing when stickied but not sure how to fix. takes time to debug
-  margin-bottom: 1.5 * $spacing;
+  // TODO: there is slight squishing when scrolling down before sticky headers get picked up
+  margin-bottom: 2.5 * $spacing;
   min-height: 10vh;
 }
 
